--- a/wp-content/themes/greaterthings/style.css
+++ b/wp-content/themes/greaterthings/style.css
@@ -875,7 +875,7 @@ a:active {
 
 @media only screen and (max-width: 991px) {
   .page-banner {
-    background: #d42e72;
+    background: #ffa500;
     padding: 80px 0;
   }
 }
@@ -1769,7 +1769,7 @@ a.btn.btn-primary-mast {
     left: 0;
     width: 100%;
     height: 100px;
-    fill: #d42e72;
+    fill: #ffa500;
   }
 }
 
@@ -2293,7 +2293,7 @@ p.rating-text:before {
     left: 0;
     width: 100%;
     height: 100px;
-    fill: #d42e72;
+    fill: #ffa500;
   }
 }
 
