--- a/wp-content/themes/greaterthings/style.css
+++ b/wp-content/themes/greaterthings/style.css
@@ -1670,7 +1670,7 @@ a.btn.btn-primary-mast {
   width: 40px;
   height: 40px;
   line-height: 40px;
-  background: #1e90ff;
+  background: #ffa500;
   position: absolute;
   right: 15px;
   top: 50%;
