--- a/wp-content/themes/greaterthings/style.css
+++ b/wp-content/themes/greaterthings/style.css
@@ -4394,7 +4394,7 @@ label.manual-address:hover {
   .footer-inner {
     padding-top: 140px;
     padding-bottom: 0;
-    background: #db306b;
+    background: #ffa500;
   }
 
   .footer-inner .container {
@@ -4430,7 +4430,7 @@ label.manual-address:hover {
 
 @media only screen and (max-width: 991px) {
   .footer-form {
-    background: #db306b;
+    background: #ffa500;
     position: relative;
     padding-bottom: 100px;
   }
