--- a/wp-content/themes/greaterthings/style.css
+++ b/wp-content/themes/greaterthings/style.css
@@ -613,7 +613,7 @@ a:active {
   top: -150px;
   left: 0;
   width: 100%;
-  background: #e9406b;
+  background: #ffa500;
   color: #fff;
   padding: 20px 0;
   z-index: 2000;
